<resources>
    <string name="app_name">Demo_MXComponent1</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="textview1">TextView</string>
    <string name="login">Login</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview">TextView</string>
    <string name="register_here">Register here</string>
    <string name="repeatpassword">Password</string>
    <string name="mevn_all_right_reserved_ver0_0">MEVN_All right reserved ver0.0</string>
</resources>