<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Login_form">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/TxtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="338dp" />

    <EditText
        android:id="@+id/TxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TxtUsername"
        android:layout_alignStart="@+id/TxtUsername"
        android:layout_marginTop="28dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="389dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_items"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/TxtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="65dp"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:id="@+id/relative_layout_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview_items"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/register_here"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:text="@string/mevn_all_right_reserved_ver0_0"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />
</RelativeLayout>